--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon -r  esm src/index.js"
-    
   },
   "keywords": [],
   "author": "",
@@ -18,8 +17,11 @@
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "express-device": "^0.4.2",
+    "express-useragent": "^1.0.13",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.8.1"
+    "mongoose": "^5.8.1",
+    "request-ip": "^2.1.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
