--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "serverAPI.js",
   "scripts": {
     "start": "nodemon -r  esm src/serverAPI.js"
   },
@@ -18,9 +18,11 @@
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "express-useragent": "^1.0.13",
+    "express-winston": "^4.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.1",
-    "request-ip": "^2.1.3"
+    "request-ip": "^2.1.3",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
